--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tabler/icons": "^2.1.2",
     "@tabler/icons-react": "^2.1.1",
     "apexcharts": "3.36.3",
+    "framer-motion": "^10.12.8",
     "lodash": "^4.17.21",
     "next": "latest",
     "react": "latest",
