--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react": "latest",
     "react-apexcharts": "^1.4.0",
     "react-dom": "latest",
-    "react-helmet-async": "^1.3.0"
+    "react-helmet-async": "^1.3.0",
+    "sass": "^1.62.1"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.191",
